# Human-Detection-Autobot

./: CMakeLists.txt  README.md
ai_server/: human_detection_AWS.py  human_detection_OpeCV.py  human_detection_server.py  human_detection_test.py  human_recogYolo.py  human_recognition.py
app/: CMakeLists.txt
app/include/: CMPT433_FinalProject.code-workspace  app_helper.h  app_tcpServer.h  app_tcp_udp.h
app/src/: app_helper.c  app_tcpServer.c  app_tcp_udp.c  main.c
hal/: CMakeLists.txt
hal/include/: buzzer.h  camera.h  display.h  drive.h  hal_helper.h  helpers.h  joystick.h  joystick_direction.h  ultrasonic.h
hal/includes/: hal_helper.h
hal/src/: buzzer.c  camera.c  display.c  drive.c  grabber.c  hal_helper.c  helpers.c  joystick.c  joystick_direction.c  ultrasonic.c  ultrasonic_sensor.c
